...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="Offer Title"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:text=""
                    android:inputType="text" />
            </LinearLayout>

...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="Company"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/company"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:text=""
                    android:inputType="text" />
            </LinearLayout>

...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="City"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/city"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:text=""
                    android:inputType="text" />
            </LinearLayout>

...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="State"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/state"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="Cost of living"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/costOfLiving"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:inputType="number"
                    android:text="" />
            </LinearLayout>

...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="Salary (per anum)"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/salary"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:inputType="numberDecimal"
                    android:text="" />
            </LinearLayout>

...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="Bonus (per anum)"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/bonus"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:inputType="numberDecimal"
                    android:text="" />
            </LinearLayout>

...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="Telework Days"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/remoteDays"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <LinearLayout
...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="Leave Time"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/leaveTime"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:inputType="number"
                    android:text="" />
            </LinearLayout>

...
                    android:layout_weight="1"
                    android:paddingStart="20sp"
                    android:text="Gym Allowance"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/gymAllowance"
                    android:layout_width="200dp"
                    android:layout_height="64dp"
                    android:inputType="numberDecimal"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/save"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="70dp"
                    android:layout_marginLeft="30dp"
                    android:onClick="saveDetails"
                    android:text="Save" />

                <Button
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="70dp"
                    android:layout_marginLeft="30dp"
                    android:onClick="backToHome"
                    android:text="Back" />

                <Button
                    android:id="@+id/addOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="64dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="70dp"
                    android:layout_marginLeft="30dp"
                    android:onClick="reload"
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/compareCurrent"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="70dp"
                android:layout_marginLeft="80dp"
                android:enabled="false"
...
