...
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Button
            android:id="@+id/enterEditJD"
            android:layout_width="282dp"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="65dp"
            android:onClick="handleJDClick"
            android:text="Enter/Edit Job Details" />

        <Button
            android:id="@+id/enterJO"
            android:layout_width="282dp"
            android:layout_height="64dp"
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="65dp"
            android:onClick="handleOfferClick"
            android:text="Enter Job Offers" />
...
            android:layout_marginBottom="70dp"
            android:layout_marginLeft="65dp"
            android:onClick="handleWeightClick"
            android:text="Adjust Comparison Settings" />

        <Button
            android:id="@+id/compareJO"
            android:layout_width="282dp"
            android:layout_height="64dp"
            android:enabled="false"
            android:layout_marginLeft="65dp"
            android:onClick="handleOfferCompare"
            android:text="Compare Job Offers" />
...
