...
                    android:layout_marginBottom="70dp"
                    android:layout_marginLeft="25dp"
                    android:onClick="compareOffers"
                    android:text="Compare" />

                <Button
                    android:id="@+id/Cancel"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="70dp"
                    android:layout_marginLeft="65dp"
                    android:onClick="backToHome"
...
